# pfe_chatb0t

./: Chapitre4.txt  Chapitre5.txt  Chapitre6.txt  Vb_pfe_estfbs.tex  rapport_pfe.tex  script.txt  tmp.tex  tmp2.tex
LateX/: Final_v.teX
Presentation/: contenue_des_slides.txt  text2.txt
Project/: .env
Projects_Stages_/sfe_projet/: README.md  app.py  app_api.py  classification.py  index.html  pyproject.toml  requirements.txt  styleee.css
